saturn-account-macros/tests/compile_fail/zero_copy_type_mismatch.stderr
error: `zero_copy` attribute requires `of = <Type>` to specify the account data type
  --> tests/compile_fail/zero_copy_type_mismatch.rs:10:5
   |
10 |     data: Account<'info, u64>,
   |     ^^^^
